[package]
description = "Nix function documentation tool, stripped down into a library"
edition = "2018"
name = "lix-doc"
version = "0.0.1"
license = "BSD-2-Clause OR MIT"
# upstream details
homepage = "https://github.com/lf-/nix-doc"
repository = "https://github.com/lf-/nix-doc"

[lib]
crate_type = ["staticlib"]

[dependencies]
rnix = "0.8.0"

[dev-dependencies]
expect-test = "1.1.0"
